# Dimea_Arcade_Chord_Control

./: .continue-here.md  .gitignore  CMakeLists.txt  README.md  fix-install.ps1  pluginval_output.txt
.planning/: .continue-here.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  todos.md
.planning/debug/: .continue-here.md  gamepad-reconnect-crash-and-midi-silence.md  lfo-cursor-click-bug.md  midi-teardown-safety.md  random-free-no-triggers.md  ui-bugs-gate-slider-crosshair-tempo-stars.md
.planning/debug/resolved/: ableton-freeze-audio-init.md  knob-drag-and-rnd-sync-style.md  two-instance-crash-and-track-type.md  ui-bugs-gate-slider-crosshair-tempo-stars.md
.planning/milestones/: v1.0-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.9-ROADMAP.md
.planning/phases/01-build-foundation-and-juce-version-lock/: 01-CONTEXT.md
.planning/phases/01-project-setup/: 01-02-SUMMARY.md  01-CONTEXT.md
.planning/phases/02-core-engine-validation/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-core-midi-output-and-note-off-guarantee/: 03-RESEARCH.md
.planning/phases/04-per-voice-trigger-sources-and-random-gate/: 04-01-SUMMARY.md
.planning/phases/05-looperengine-hardening-and-daw-sync/: .continue-here.md  05-01-PLAN.md  05-01-SUMMARY.md  05-03-PLAN.md  05-RESEARCH.md
.planning/phases/06-sdl2-gamepad-integration/: .continue-here.md  06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-03-PLAN.md
.planning/phases/07-daw-compatibility-distribution-and-release/: .continue-here.md  07-01-PLAN.md  07-02-PLAN.md  07-CONTEXT.md
.planning/phases/08-post-v1.0-patch-verification/: .continue-here.md  08-01-SUMMARY.md  08-02-SUMMARY.md  08-VALIDATION.md
.planning/phases/09-midi-panic-and-mute-feedback/: 09-02-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md
.planning/phases/10-trigger-quantization-infrastructure/: 10-01-SUMMARY.md  10-02-SUMMARY.md  10-03-SUMMARY.md  10-05-SUMMARY.md  10-RESEARCH.md  10-VERIFICATION.md  deferred-items.md
.planning/phases/11-ui-polish-and-installer/: 11-01-PLAN.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-04-PLAN.md  11-04-SUMMARY.md  11-CONTEXT.md  11-VERIFICATION.md
.planning/phases/12-lfo-engine-core/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-SUMMARY.md  12-CONTEXT.md  12-RESEARCH.md  12-VERIFICATION.md
.planning/phases/13-processblock-integration-and-apvts/: 13-01-SUMMARY.md  13-RESEARCH.md
.planning/phases/14-lfo-ui-and-beat-clock/: 14-01-PLAN.md  14-02-PLAN.md  14-03-PLAN.md  14-CONTEXT.md  14-VERIFICATION.md
.planning/phases/15-gamepad-preset-control/: 15-02-SUMMARY.md
.planning/phases/16-distribution/: 16-CONTEXT.md  16-RESEARCH.md  16-VERIFICATION.md
.planning/phases/17-bug-fixes/: 17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-02-SUMMARY.md  17-03-PLAN.md
.planning/phases/18-single-channel-routing/: 18-01-SUMMARY.md  18-02-SUMMARY.md  18-03-SUMMARY.md  18-CONTEXT.md
.planning/phases/19-sub-octave-per-voice/: 19-01-SUMMARY.md  19-02-SUMMARY.md  19-CONTEXT.md
.planning/phases/20-random-trigger-system-extensions/: 20-01-PLAN.md  20-01-SUMMARY.md  20-02-PLAN.md  20-03-PLAN.md
.planning/phases/21-left-joystick-modulation-expansion/: .continue-here.md  21-01-PLAN.md  21-02-PLAN.md  21-RESEARCH.md  21-VERIFICATION.md
.planning/phases/22-lfo-recording/: 22-01-SUMMARY.md  22-02-SUMMARY.md  22-CONTEXT.md  22-RESEARCH.md  22-VERIFICATION.md
.planning/phases/23-arpeggiator/: 23-01-SUMMARY.md  23-02-SUMMARY.md  23-VERIFICATION.md
.planning/phases/24-gamepad-option-mode-1/: 24-01-PLAN.md  24-01-SUMMARY.md  24-02-PLAN.md  24-02-SUMMARY.md  24-03-PLAN.md  24-03-SUMMARY.md  24-CONTEXT.md  24-RESEARCH.md  24-VERIFICATION.md
.planning/phases/24.1-lfo-joystick-visual-tracking-and-center-offset/: 24.1-01-PLAN.md  24.1-02-PLAN.md  24.1-02-SUMMARY.md
.planning/phases/25-distribution/: 25-01-PLAN.md  25-02-PLAN.md  25-CONTEXT.md  25-RESEARCH.md
.planning/phases/26-defaults-and-bug-fix/: 26-01-PLAN.md  26-VERIFICATION.md
.planning/phases/27-triplet-subdivisions/: 27-01-PLAN.md  27-01-SUMMARY.md  27-VERIFICATION.md
.planning/phases/28-random-free-redesign/: 28-01-PLAN.md  28-01-SUMMARY.md  28-02-PLAN.md  28-02-SUMMARY.md  28-CONTEXT.md  28-RESEARCH.md
.planning/phases/29-looper-perimeter-bar/: 29-VERIFICATION.md
.planning/phases/31-paint-only-visual-foundation/: .continue-here.md  31-02-SUMMARY.md  31-CONTEXT.md  31-VERIFICATION.md
.planning/phases/32-spring-damper-inertia-and-angle-indicator/: 32-01-PLAN.md  32-01-SUMMARY.md  32-CONTEXT.md
.planning/phases/33-version-sync/: 33-01-PLAN.md  33-01-SUMMARY.md  33-CONTEXT.md
.planning/phases/33.1-cursor-inv-lfo-fixes/: .continue-here.md  33.1-01-PLAN.md  33.1-CONTEXT.md
.planning/phases/34-cross-lfo-modulation-targets/: .continue-here.md  34-01-PLAN.md  34-02-PLAN.md  34-02-SUMMARY.md
.planning/phases/35-arp-subdivision-expansion/: 35-01-PLAN.md  35-01-SUMMARY.md  35-CONTEXT.md
.planning/phases/36-arp-all-trigger-sources/: 36-01-PLAN.md  36-CONTEXT.md
.planning/phases/37-looper-internalbeat-fix/: 37-01-PLAN.md  37-01-SUMMARY.md  37-CONTEXT.md
.planning/phases/38-quick-fixes-rec-lane-undo/: 38-01-PLAN.md  38-01-SUMMARY.md  38-02-PLAN.md  38-CONTEXT.md
.planning/phases/38.1-modulation-polish-and-cc-routing/: 38.1-01-PLAN.md  38.1-01-SUMMARY.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Source/: ChordEngine.cpp  ChordEngine.h  ChordNameHelper.h  GamepadInput.cpp  GamepadInput.h  LfoEngine.cpp  LfoEngine.h  LooperEngine.cpp  LooperEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleQuantizer.cpp  ScaleQuantizer.h  SdlContext.cpp  TriggerSystem.cpp  TriggerSystem.h
Tests/: ChordNameTests.cpp  LooperEngineTests.cpp
installer/: DimaChordJoystick-Setup.iss  DimaChordJoystick-Setup.iss.in  DimeaArcade-ChordControl-Setup.iss  DimeaArcade-ChordControl-Setup.iss.in
manual/: ArcadeChordControl-Manual.html  ChordJoystick-Manual.html
tests/: ChordEngineTests.cpp  LooperEngineTests.cpp  ScaleQuantizerTests.cpp
(+92 files in other folders)
